refactor: old tracker import opt